# mosquito-drone

./: .cproject  .project  CMakeLists.txt  README.md  STM32F103C8TX_FLASH.ld
.cache/clangd/index/: main.c.7FDA37C0BF527C34.idx  startup_stm32f103c8tx.s.090596FD0749A201.idx  startup_stm32f103c8tx.s.6A74FC5207097C14.idx  syscalls.c.2A1E2A2D052023C7.idx  sysmem.c.F5723D003BAC8837.idx
include/: adafruit-BNO055.h  adc.h  bmp390.h  dbg.h  debug.h  gpio.h  i2c.h  types.h  uart.h  util.h
src/: adafruit-BNO055.c  adc.c  bmp390.c  debug.c  i2c.c  main.c  types.c  uart.c  util.c
src/control/: flight_control.c  flight_control.h  parameters.h
src/devices/: bmp390.c  bmp390.h  bno055.c  bno055.h  esc.c  esc.h
src/mcu/: adc.c  adc.h  i2c.c  i2c.h  pwm.c  pwm.h  timer.c  timer.h  types.c  types.h
src/util/: debug.c  debug.h  error_types.h  quaternion.c  quaternion.h
